GMS-116 Minor code refactors